--- a/src/app/i18n/locales/ru.json
+++ b/src/app/i18n/locales/ru.json
@@ -9,22 +9,19 @@
     "cta": "Получить скидку"
   },
   "featuresBanner": {
-    "label": { "blueText": "Получите скидку 87%", "text": "на все Premium планы" },
-    "title": "Получите эксклюзивную скидку!",
-    "subTitle": {
-      "blueText": "Специальное предложение:",
-      "text": "храните файлы конфиденциально за меньшие деньги"
-    },
-    "ctaGet": "Получить предложение",
+    "label": { "blueText": "Скидка 90%", "text": "на все тарифы" },
+    "title": "Получите специальное предложение Черной пятницы!",
+    "subTitle": "**Максимальная скидка** для **максимальной конфиденциальности**",
+    "ctaGet": "Принять приглашение",
     "ctaContinue": "Продолжить бесплатно",
     "guarantee": "30-дневная гарантия возврата денег",
     "products": {
       "drive": "Drive",
-      "antivirus": "Antivirus",
-      "cleaner": "Cleaner",
+      "antivirus": "Антивирус",
+      "cleaner": "Очистка",
       "vpn": "VPN",
       "meet": "Meet",
-      "mail": "Mail"
+      "mail": "Почта"
     }
   },
   "susbcriptionsBanner": {
