--- a/src/app/i18n/locales/es.json
+++ b/src/app/i18n/locales/es.json
@@ -4,22 +4,19 @@
     "logOut": "Cerrar sesión"
   },
   "featuresBanner": {
-    "label": { "blueText": "Obtén 87% de descuento", "text": "en todos los Planes" },
-    "title": "¡Obtén un descuento exclusivo!",
-    "subTitle": {
-      "blueText": "Oferta especial:",
-      "text": "almacena archivos con privacidad por menos"
-    },
-    "ctaGet": "Obtener la oferta",
+    "label": { "blueText": "90% de descuento", "text": "en todos los planes" },
+    "title": "¡Consigue tu oferta especial de Black Friday!",
+    "subTitle": "El **mayor descuento** para la **máxima privacidad**",
+    "ctaGet": "Aceptar invitación",
     "ctaContinue": "Continuar gratis",
-    "guarantee": "Garantía de devolución de dinero de 30 días",
+    "guarantee": "Garantía de devolución de 30 días",
     "products": {
       "drive": "Drive",
       "antivirus": "Antivirus",
-      "cleaner": "Cleaner",
+      "cleaner": "Limpiador",
       "vpn": "VPN",
       "meet": "Meet",
-      "mail": "Mail"
+      "mail": "Correo"
     }
   },
   "susbcriptionsBanner": {
