--- a/src/app/i18n/locales/ru.json
+++ b/src/app/i18n/locales/ru.json
@@ -1849,58 +1849,63 @@
           "free": "Free"
         },
         "planFeaturesList": {
-          "title": "Детали плана",
+          "title": "Детали Плана",
           "comingSoon": "Скоро",
-          "storage": " зашифрованного хранилища с нулевым знанием",
+          "storage": " зашифрованное хранилище",
           "1TB": {
-            "title": "Базовый",
-            "features": [
-              "1TB зашифрованного хранилища с нулевым знанием",
-              "Постквантовое шифрование",
-              "Сверхбыстрый безлимитный VPN (FR)",
-              "Антивирус",
-              "Резервное копирование ваших файлов",
-              "Защищенный паролем обмен файлами",
-              "Соответствие GDPR",
-              "Двухфакторная аутентификация (2FA)"
-            ]
+              "title": "Essential (Базовый)",
+              "features": [
+                  "1 ТБ зашифрованного хранилища",
+                  "Постквантовая криптография",
+                  "Шифрование с нулевым разглашением (Zero-Knowledge)",
+                  "Двухфакторная аутентификация",
+                  "Резервное копирование вашего компьютера",
+                  "Обмен файлами с защитой паролем",
+                  "Зашифрованный VPN",
+                  "Антивирус"
+              ],
+              "comingSoonFeatures": ["Версионирование файлов"]
           },
           "3TB": {
-            "title": "Премиум",
-            "features": [
-              "3TB зашифрованного хранилища с нулевым знанием",
-              "Постквантовое шифрование",
-              "Сверхбыстрый безлимитный VPN (FR, DE, PL)",
-              "Антивирус",
-              "Резервное копирование ваших файлов",
-              "Защищенный паролем обмен файлами",
-              "Приглашение, обмен и сотрудничество",
-              "Соответствие GDPR",
-              "Двухфакторная аутентификация (2FA)"
-            ],
-            "comingSoonFeatures": ["Очиститель устройств", "Мониторинг даркнета"]
+              "title": "Premium (Премиум)",
+              "features": [
+                  "3 ТБ зашифрованного хранилища",
+                  "Постквантовая криптография",
+                  "Шифрование с нулевым разглашением (Zero-Knowledge)",
+                  "Двухфакторная аутентификация",
+                  "Резервное копирование вашего компьютера",
+                  "Обмен файлами с защитой паролем",
+                  "Приглашение, обмен и совместная работа",
+                  "Зашифрованный VPN",
+                  "Антивирус",
+                  "Cleaner (Очиститель)"
+              ],
+              "comingSoonFeatures": ["Версионирование файлов"]
           },
           "5TB": {
-            "title": "Максимальный",
-            "features": [
-              "5TB зашифрованного хранилища с нулевым знанием",
-              "Постквантовое шифрование",
-              "Сверхбыстрый безлимитный VPN (FR, DE, PL, CA, UK)",
-              "Антивирус",
-              "Резервное копирование ваших файлов",
-              "Защищенный паролем обмен файлами",
-              "Приглашение, обмен и сотрудничество",
-              "Соответствие GDPR",
-              "Двухфакторная аутентификация (2FA)",
-              "Поддержка CLI, WebDav, NAS и Rclone"
-            ],
-            "comingSoonFeatures": ["Очиститель устройств", "Мониторинг даркнета", "Meet", "Mail"]
+              "title": "Ultimate (Максимальный)",
+              "features": [
+                  "3 ТБ зашифрованного хранилища",
+                  "Постквантовая криптография",
+                  "Шифрование с нулевым разглашением (Zero-Knowledge)",
+                  "Двухфакторная аутентификация",
+                  "Резервное копирование вашего компьютера",
+                  "Обмен файлами с защитой паролем",
+                  "Приглашение, обмен и совместная работа",
+                  "Поддержка CLI и WebDav",
+                  "Поддержка NAS и Rclone",
+                  "Зашифрованный VPN",
+                  "Антивирус",
+                  "Cleaner (Очиститель)",
+                  "Meet (Видеоконференции)"
+              ],
+              "comingSoonFeatures": ["Версионирование файлов", "Mail (Почта)"]
           },
           "1GB": {
-            "title": "Бесплатный",
-            "features": ["1GB зашифрованного хранилища с нулевым знанием", "Бесплатный стандартный VPN (FR)"]
+              "title": "Free (Бесплатный)",
+              "features": ["1 ГБ зашифрованного хранилища", "Зашифрованный VPN"]
           }
-        },
+      },
         "businessPlanFeaturesList": {
           "title": "Детали плана",
           "storage": " хранилища",
