--- a/src/app/i18n/locales/ru.json
+++ b/src/app/i18n/locales/ru.json
@@ -9,7 +9,10 @@
     "cta": "Получить скидку"
   },
   "featuresBanner": {
-    "label": { "blueText": "Скидка 90%", "text": "на все тарифы" },
+    "label": {
+      "blueText": "Скидка 90%",
+      "text": "на все тарифы"
+    },
     "title": "Получите специальное предложение Черной пятницы!",
     "subTitle": "**Максимальная скидка** для **максимальной конфиденциальности**",
     "ctaGet": "Принять приглашение",
@@ -160,11 +163,14 @@
       "successDescription": "Ваша учетная запись и пароль были восстановлены",
       "error": "Что-то пошло не так при перезапуске учетной записи"
     },
-    "universalLinkSuccess": {
+    "universalLink": {
       "loginAs": "войти в систему как",
       "openApp": "Откройте приложение",
       "anotherAccount": "Использовать другую учетную запись?",
-      "login": "Войти"
+      "login": "Войти",
+      "success": "Вы успешно вошли в систему",
+      "error": "Не удалось выполнить вход, попробуйте снова",
+      "closeWindow": "Вы можете закрыть это окно"
     }
   },
   "checkout": {
@@ -1800,10 +1806,23 @@
             "DeleteFile": "Файл удалён",
             "DeleteFolder": "Папка удалена"
           },
-          "platform": { "title": "Платформа", "Web": "Веб", "Mobile": "Мобильный", "Desktop": "Настольный" },
-          "dateRange": { "title": "Диапазон дат", "days": "Последние {{days}} дней" }
+          "platform": {
+            "title": "Платформа",
+            "Web": "Веб",
+            "Mobile": "Мобильный",
+            "Desktop": "Настольный"
+          },
+          "dateRange": {
+            "title": "Диапазон дат",
+            "days": "Последние {{days}} дней"
+          }
         },
-        "headerTable": { "date": "Дата", "member": "Участник", "activity": "Деятельность", "access": "Доступ" },
+        "headerTable": {
+          "date": "Дата",
+          "member": "Участник",
+          "activity": "Деятельность",
+          "access": "Доступ"
+        },
         "noResults": "Нет результатов для отображения"
       }
     },
